--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -18,3 +18,16 @@
 .nav-link-text {
   color: black;
 }
+
+.site-title {
+  font-size: 2.5rem;
+  color: #036193;
+  font-weight: 700;
+  margin: 1rem 0;
+}
+.site-description {
+  font-size: 1rem;
+  color: #1b3d4f;
+  font-weight: 300;
+  margin: 1rem 0;
+}
